# rust-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  docker-compose.yml
.github/workflows/: deploy.yml
.shuttle/: config.toml
src/: main.rs
src/api/: hiroyuki.rs  mod.rs
src/audio/: mod.rs
src/commands/: attachmentinput.rs  hiroyuki.rs  id.rs  mod.rs  modal.rs  numberinput.rs  setlanguage.rs  voice.rs  wonderful_command.rs
src/db/: mod.rs
src/handlers/: message.rs  mod.rs  voice_state.rs
