[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["taroj1205 <taroj1205@gmail.com>"]

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.3"
shuttle-runtime = "0.34.0"
shuttle-serenity = "0.34.0"
shuttle-secrets = "0.34.0"
anyhow = "1.0.75"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.6"
features = ["cache", "framework", "standard_framework", "rustls_backend"]