[package]
name = "taroj1205-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["taroj1205 <taroj1205@gmail.com>"]

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.3"
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
anyhow = "1.0.75"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.6"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
