[package]
name = "taroj1205-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["taroj1205 <taroj1205@gmail.com>"]

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread", "full"]

[dependencies.serenity]
version = "0.12.0"
features = ["client", "gateway", "rustls_backend", "model", "collector", "voice"]

[dependencies.songbird]
version = "0.4"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["wav"]